--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,4 +1,10 @@
 <h2>My heroes</h2>
+<div>
+    <label for="new-hero">Hero name: </label>
+    <input id="new-hero" #heroName>
+
+    <button class="add-button" (click)="addHero(heroName.value); heroName.value=''">Add hero</button>
+</div>
 <ul class="heroes">
     <li *ngFor="let hero of heroes">
         <a routerLink="/detail/{{hero.id}}">
